fixed gap issue

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -422,6 +422,9 @@
     .product-features ul{
         margin: 5% 0 ;
     }
+    .customer-section{
+        margin-top: 5%;
+    }
     
 }
 
@@ -457,7 +460,7 @@
         margin: 7% 0;
     }
     .product_section{
-        margin-top: 0;
+        margin-top: 0px;
     }
     .product-bottom img{
         display: none;
