--- a/styles/main.css
+++ b/styles/main.css
@@ -502,6 +502,9 @@ header {
   .product-features ul {
     margin: 5% 0;
   }
+  .customer-section {
+    margin-top: 5%;
+  }
 }
 @media (max-width: 676px) {
   h2 {
@@ -531,7 +534,7 @@ header {
     margin: 7% 0;
   }
   .product_section {
-    margin-top: 0;
+    margin-top: 0px;
   }
   .product-bottom img {
     display: none;
